--- a/src/app/messages/compose/compose.component.html
+++ b/src/app/messages/compose/compose.component.html
@@ -6,6 +6,7 @@
         <div class="top">
           <mat-icon class="jiggle" aria-label="Rechercher">search</mat-icon>
           <h2>Que voulez vous faire aujourd'hui ? </h2>
+          <div class="bad-mood">{{mood | async}}</div>
         </div>
         <div class="bottom">
           <form class="message-form" action="">
