--- a/src/app/messages/response/one/one.component.css
+++ b/src/app/messages/response/one/one.component.css
@@ -30,8 +30,14 @@
 .right {
   align-self: flex-end;
 }
+.right > .text {
+  text-align: right;
+}
 .left {
   align-self: flex-start;
+}
+.left > .text {
+  text-align: left;
 }
 
 .sender {
