--- a/src/app/messages/response/one/one.component.html
+++ b/src/app/messages/response/one/one.component.html
@@ -3,5 +3,5 @@
     {{message}}
   </p>
   <img class="sender" *ngIf="sender === 'pole' " src="assets/robot.png" alt="">
-  <img class="sender" *ngIf="sender === 'bot'" src="assets/user.png" alt="">
+  <img class="sender" *ngIf="sender === 'bot'" src="assets/pole.png" alt="">
 </div>
