--- a/src/app/messages/compose/compose.component.html
+++ b/src/app/messages/compose/compose.component.html
@@ -4,9 +4,10 @@
     <div class="actions">
       <div class="question">
         <div class="top">
-          <mat-icon class="jiggle" aria-label="Rechercher">search</mat-icon>
-          <h2>Que voulez vous faire aujourd'hui ? </h2>
-          <div class="bad-mood">{{mood | async}}</div>
+          <div class="row">
+            <mat-icon class="jiggle" aria-label="Rechercher">search</mat-icon>
+            <h2>Que voulez vous faire aujourd'hui ? </h2>
+          </div>
         </div>
         <div class="bottom">
           <form class="message-form" action="">
