--- a/src/app/messages/response/list/list.component.css
+++ b/src/app/messages/response/list/list.component.css
@@ -11,5 +11,7 @@
 }
 :host {
   width: 100%;
+  height: 50%;
+  overflow: auto;
   transition: flex-grow 0.3s ease-in, opacity 0.1s ease-in 0.3s;
 }
