fix(url in responses)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center" class="colored-background" [ngClass]="mood ">
-  <div class="logo">
+  <div class="logo" (click)="reload()">
     <img src="assets/pole.png" alt="">
     <h1>Chapeau l'emploi</h1>
   </div>
