--- a/src/app/messages/compose/compose.component.html
+++ b/src/app/messages/compose/compose.component.html
@@ -12,7 +12,7 @@
         <div class="bottom">
           <form class="message-form" action="">
             <mat-form-field class="message-field">
-              <input matInput placeholder="Entrez içi ce que voulez vous faire" name="question" [(ngModel)]="question" value="" />
+              <input matInput placeholder="Que voulez vous faire" name="question" [(ngModel)]="question" value="" />
             </mat-form-field>
             <button (click)="onClick()" mat-icon-button>
               <mat-icon aria-label="Example icon-button with a heart icon">send</mat-icon>
