--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -22,6 +22,7 @@
   align-items: center;
   color: rgb(27, 43, 102);
   justify-content: center;
+  cursor: pointer;
 }
 .colored-background {
   -webkit-transition: background-color 2s ease-out;
