--- a/src/app/messages/response/one/one.component.css
+++ b/src/app/messages/response/one/one.component.css
@@ -26,6 +26,7 @@
 .message.left {
   flex-direction: row-reverse;
   justify-content: flex-end;
+  background-color: #b3e5fc;
 }
 .right {
   align-self: flex-end;
