--- a/src/app/messages/compose/compose.component.css
+++ b/src/app/messages/compose/compose.component.css
@@ -5,6 +5,7 @@
   justify-content: center;
   height: 40%;
   transition: all 0.1s ease-in;
+  height: 20%;
   /*background-image: url('../../../assets/bg.jpg');
   background-size: cover;*/
 }
